Enhanced Post cards

--- a/news_aggregator/app/news_aggregaator/views/home.ejs
+++ b/news_aggregator/app/news_aggregaator/views/home.ejs
@@ -668,7 +668,7 @@
                 <div class="dropdown">
                     <button class="profile-btn" id="profileBtn">
                         <i class="fas fa-user"></i>
-                        <span class="notification-badge" id="notificationBadge">3</span>
+                        <!-- <span class="notification-badge" id="notificationBadge">3</span> -->
                     </button>
                     <div class="dropdown-menu" id="dropdownMenu">
                         <a href="/user/notifications" class="dropdown-item">
