--- a/news_aggregator/app/news_aggregaator/views/navbar.ejs
+++ b/news_aggregator/app/news_aggregaator/views/navbar.ejs
@@ -358,7 +358,7 @@
                 <div class="dropdown">
                     <button class="profile-btn" id="profileBtn">
                         <i class="fas fa-user"></i>
-                        <span class="notification-badge" id="notificationBadge">3</span>
+                        <!-- <span class="notification-badge" id="notificationBadge"></span> -->
                     </button>
                     <div class="dropdown-menu" id="dropdownMenu">
                         <a href="/user/notifications" class="dropdown-item">
